@@ -50,13 +50,13 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
   9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013082501 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013082600 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   cdfa3ced39a5dfbe38a6f9f8c67007c80e76eb0a 2013082500 mingw32-pthreads-w32.xml
   c5e5acd7ddfbb8b412ba1ade45088d7a22433228 2013082303 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
-  b934cbeb35035e8a85d154e5973df2a9c757576c 2013082500 mingw32-zlib.xml
+  a8ccf345561b36b3fb00e2e5767206bd65419fde 2013082600 mingw32-zlib.xml
 #
 # $RCSfile$: end of file
